--- a/static/stylesheets/app.css
+++ b/static/stylesheets/app.css
@@ -7,6 +7,7 @@
 :: Fonts
 :: Header
 :: Footer
+:: Homepage
 :: Product Pages
 :: About Page
 :: Modals
@@ -198,24 +199,115 @@
 ----------------------------------------- */
 
 	footer { background: #1c1c1c; height: 130px; margin-top: 2em;  }
-	footer ul { margin-top: 34px;  }
+	footer ul { margin-top: 30px;  }
+	footer .text-right ul { margin-top: 36px; }
+	
+	
 	footer li { 
 		list-style-type: none; display: inline-block; text-transform: uppercase; 
 		margin-right: 28px; margin-top: 14px; font-size: 0.875em; /*14/16*/  font-weight: 500;  }
-	footer a { color: #8f8f8f; }
-	footer span {  margin-top: 54px; color: #8f8f8f;  font-size: 1em; /*14/16*/ font-weight: 500; display: inline-block }
+		
+	footer .text-right li { margin-right: 0; margin-left: 1px; }	
+		
+	footer a, footer a:hover { color: #8f8f8f; }
 	
 	
+	.footerlink { width: 36px; height: 36px; margin-top: 0; vertical-align: middle; }
+	.footerlink a { text-indent: -9999px; text-align: left; display: inline-block;  }
+	
+	
+	.footerlink.facebook { background: url(../images/footer/footer-fb.png) no-repeat; margin-left: 1em; }
+	.footerlink.twitter { background: url(../images/footer/footer-twitter.png) no-repeat; }
+	.footerlink.linkedin { background: url(../images/footer/footer-linkedin.png) no-repeat; }
+	.footerlink.copyright { width: auto; height: auto; }
+	
+	.footerlink.copyright-single { display: none; }
 	
 	
 	@media only screen and (max-width: 767px) { 
-		footer { margin-top: 0; }
-		footer ul { text-align: center; margin-top: 24px; margin-bottom: 0.7em; }
+		footer { margin-top: 0; height: 150px; }
+		footer ul { text-align: center; margin-top: 18px; margin-bottom: 0.7em; }
 		footer li { margin-right: 7px; margin-left: 7px;  }
-		footer span { width: 100%; text-align: center; margin-top: 0; } }
+
+		
+		footer .text-right li { margin: 0 1px; }
+		footer .text-right ul { margin-top: 0; } 
+		
+		.footerlink { width: 30px; height: 30px; }
+		.footerlink a {  }
+		.footerlink.facebook { margin-left: 1px; -moz-background-size:cover; -webkit-background-size:cover; background-size:cover; }
+		.footerlink.twitter { -moz-background-size:cover; -webkit-background-size:cover; background-size:cover; }
+		.footerlink.linkedin { -moz-background-size:cover; -webkit-background-size:cover; background-size:cover; }
+		
+		.footerlink.copyright { display: none;  }
+		.footerlink.copyright-single { display: block; width: 100%; text-align: center; margin-top: 10px; } }
+		
+		
+		
+	@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
+	only screen and (-moz-min-device-pixel-ratio: 1.5),
+	only screen and (-o-min-device-pixel-ratio: 3/2),
+	only screen and (min-device-pixel-ratio: 1.5) {
+		.footerlink.facebook { background: url(../images/footer/footer-fb@2x.png) no-repeat; }
+		.footerlink.twitter { background: url(../images/footer/footer-twitter@2x.png) no-repeat; }
+		.footerlink.linkedin { background: url(../images/footer/footer-linkedin@2x.png) no-repeat; } }	
+	
+	
+
+/* -----------------------------------------
+	Homepage
+----------------------------------------- */
+
+
+
+	.homebanner { height: 540px; background: #222; color: #fff; }
+	
+	
+	.homesub  {  text-align: center; padding-top: 64px; }
 	
 	
 	
+	.homesub .block-grid.six-up { margin-bottom: 80px; margin-top: 2em; margin: 0 -8px; }
+	
+	.homesub .block-grid.six-up img { margin-bottom: 1em; width: 100%; }
+	.homesub .block-grid.six-up span { width: 100%; }
+	.homesub .block-grid.six-up > li { 
+		 width: 16.66666667%;  padding: 0;
+		text-transform: uppercase; line-height: 1.3; font-size: 0.875em; }
+
+	.homesub  .block-grid.five-up > li:nth-child(6n+1) { clear: both; }	
+		
+
+	.homesub_widget,
+	.homesub_app,
+	.homesub_api,
+	.homesub_tv,
+	.homesub_mobile,
+	.homesub_sub { 
+		/*background: url(../images/homepage/platform_app.png) no-repeat center 0 ;*/ 
+		}
+	
+	
+	.homeslide1 h1 { margin-top: 142px; }
+	.homeslide2 h1 { margin-top: 118px; padding-right: 50px; }
+	.homeslide3 h1 { margin-top: 118px;  }
+
+
+	@media only screen and (max-width: 767px) {
+		.homesub .block-grid.mobile-two-up > li	{ 
+			width: 33.333%;
+			font-size: 1.28571429em; /*18/16*/
+			margin-bottom: 1.5em; }
+			
+		.homesub .block-grid.six-up img { margin-bottom: 0.5em; }	
+		.homesub .block-grid.six-up span { display: block; height: 2em; }	  }
+	
+
+	@media only screen and (max-width: 480px) {
+		.homesub .block-grid.six-up img {  }
+		.homesub .block-grid.mobile-two-up > li	{ width: 50%;  } 
+		 }
+				
 	
 	
 /* -----------------------------------------
