--- a/static/stylesheets/app.css
+++ b/static/stylesheets/app.css
@@ -16,6 +16,8 @@
 :: Legals
 :: Countries
 :: FAQ
+:: Press and Media
+
 
 */
 
@@ -74,24 +76,24 @@
 	/* Base Type Styles Using Modular Scale ---------------------- */
 	body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, p, blockquote, th, td { margin: 0; padding: 0; font-size: 1em; font-weight: 500; }
 	
-	p { /*font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;*/ font-weight: 500; font-size: 1.14285714em; line-height: 1.71428571; margin-bottom: 1.71428571em; }
+	p { /*font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;*/ font-weight: 500; font-size: 1.14285714em; line-height: 1.5; margin-bottom: 1.5em; }
 
-	
-	p.lead { font-size: 17.5px; line-height: 1.6; margin-bottom: 17px; }
 	
 	aside p { font-size: 0.92857143em; line-height: 1.35; font-style: italic; } /*13/14*/
 	
-	h1, h2, h3, h4, h5, h6 { /*font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; font-weight: bold;*/ text-rendering: optimizeLegibility; line-height: 1.1; margin-bottom: 1em;  }
+	h1, h2, h3, h4, h5, h6 { /*font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; font-weight: bold;*/ text-rendering: optimizeLegibility;  margin-bottom: 1em;  }
 	
 	h1 small, h2 small, h3 small, h4 small, h5 small, h6 small { font-size: 60%; color: #6f6f6f; line-height: 0; }
 	
 	h1 { font-size: 2.57142857em; line-height:1.16666667 ; margin-bottom: 0.3333333em; font-weight: 400;  }  /*36/14*/
 	h2 { font-size: 2.14285714em; margin-bottom: 0.5em; font-weight: 400;  } /*30/14*/
-	h3 { font-size: 1.71428571em; font-weight: 400; line-height: 1.5; color: #828282; margin-bottom: 0.25em; } /*24/14*/
+	h3 { font-size: 1.71428571em; font-weight: 400; line-height: 1.25; color: #828282; margin-bottom: 0.25em; } /*24/14*/
 	h4 { font-size: 1.5em; font-weight: 400; line-height: 1.4; color: #828282;} /*21/14*/
 	h5 { font-size: 1.28571429em; line-height: 1.5;  margin-bottom: 1.5em;} /*18/14*/
 	h6 { font-size: 1.14285714em;  font-weight: 600;  margin-bottom: 0; line-height: 1.5;
 	} /*16/14*/
+	
+	h1 + p { margin-top: 1.14285714em; }
 	
 	h1 + h3 { margin-top: -0.14285714em; }
 	h1 + h5 { line-height: 2; margin-top:  -0.05555556em; }
@@ -99,13 +101,15 @@
 	
 	h3 + h4 { margin-top: 1em; }
 	
+	h3 + p { margin-top: 1em; }
+	
 	strong { font-weight: 600; }
 	
 	pre { font-size: 1.14285714em; }
 	
 	
 	/* Lists ---------------------- */
-	ul, ol { font-size: 1.14285714em; line-height: 1.71428571; margin-bottom: 1.5em; list-style-position: outside; }
+	ul, ol { font-size: 1.14285714em; line-height: 1.5; margin-bottom: 1.5em; list-style-position: outside; }
 	
 	ul { list-style-type: square; }
 	
@@ -143,9 +147,10 @@
 
 	header { height: 130px; background: #fff;  }
 	
+	header > .row { overflow: visible; }
+	
 	header .nav-bar { background: none; color: inherit; margin-top: 48px; padding: 0; color: #222; text-align: right; float: right; }
 	
-	header .nav-bar > li ul {   }
 	header .nav-bar > li { 
 		list-style-type: none; display: inline-block; text-transform: uppercase; border: none; padding: 0; 
 		margin-left: 28px; /*font-size: 0.875em;*/ /*14/16*/  font-size:0.9375em; text-align: right;  }
@@ -167,7 +172,55 @@
 	header .sidebar-button { display: inline-block; margin-top: -31px; padding: 12px 30px; }
 	
 	
-	p.show-for-small { font-size: 1em; line-height: 1;  }	
+	p.show-for-small { font-size: 1em; line-height: 1;  }
+	
+	
+	header .nav-bar > li ul { text-align: left; padding-left: 40px;  }
+	header .nav-bar > li ul li { padding-left: 0px; }
+	
+	header .flyout { 
+		background: #fff; 
+		border: 1px solid #a0a0a0; width: 200px;  padding: 10px 0 !important; }
+	
+	
+	
+	
+	header .nav-bar li ul li a { line-height: 1; background: none; padding: 10px 20px; color: #222; border: none; }
+	header .nav-bar li ul li a:hover { color: #bf2222; text-decoration: none; background: none; }
+	
+	
+	header .nav-bar > li.has-flyout > a:first-child { padding-right: 6px; }
+
+	header .nav-bar > li.has-flyout > a:first-child::before { 
+		content: ""; width: 0; height: 0; top: 17px; right: -6px; position: absolute;
+		border: 3px solid;
+		border-color: #828282 transparent transparent transparent; }	
+		
+		
+	header .nav-bar > li.has-flyout > a:first-child::after { 
+		width: 20px; height: 10px; content: ''; background: url(../images/nav/tip-arrow.png) center bottom no-repeat;
+		position: absolute; top: auto; border: none; display: none;
+		bottom: -2px; left: 50%; margin-left: -10px; z-index: 42; }	
+		
+		
+	header .nav-bar > li.has-flyout:hover > a:first-child::after { display: block; }
+	
+	
+/*	header .nav-bar li ul li { background: url(../images/nav/dropdown/white-label.png) 10px 5px no-repeat; }*/
+	
+/*	header li.white-label { background: url(../images/nav/dropdown/white-label.png) 10px 5px no-repeat; }
+	header li.white-label:hover { background-position: 10px -35px; }
+		
+		
+	header li.subscription { background: url(../images/nav/dropdown/subscription.png) 10px 5px no-repeat; }	
+	
+	header li.smart-tv { background: url(../images/nav/dropdown/smart-tv.png) 10px 5px no-repeat; }	
+	
+	header li.in-app { background: url(../images/nav/dropdown/in-app.png) 10px 5px no-repeat; }
+		
+	header li.tablet { background: url(../images/nav/dropdown/web.png) 10px 5px no-repeat; }
+	
+	header li.mobile { background: url(../images/nav/dropdown/mobile.png) 10px 5px no-repeat; }*/
 	
 			
 	@media only screen and (max-width: 900px) {
@@ -492,7 +545,7 @@
 	.documentation-nav ul.flyout li.active, .nav-bar li ul li.active { border-left: 0; }
 	
 	.documentation-nav ul.flyout li a, .nav-bar li ul li {  }
-	.documentation-nav ul.flyout li a, .nav-bar li ul li a {  color: #bf2222 ; padding: 8px 20px; text-decoration: none; }
+	.documentation-nav ul.flyout li a {  color: #bf2222 ; padding: 8px 20px; text-decoration: none; }
 	
 	.documentation-nav ul.flyout li.active a, .nav-bar li ul li.active a { 
 		background: #b00f0f; /* Old browsers */
@@ -530,7 +583,7 @@
 			display: block !important; background: none; border: none; float: left; width: 100%;	}
 			
 		.documentation-nav li a { color: #222; background: none; }
-		.documentation-nav ul.flyout li a, .nav-bar li ul li a { background: none; border: none; box-shadow: none; padding: 0 30px; line-height: 1.5; }	
+		.documentation-nav ul.flyout li a { background: none; border: none; box-shadow: none; padding: 0 30px; line-height: 1.5; }	
 		.documentation-nav ul.flyout li.active, .nav-bar li ul li.active { border: none; }	}
 	
 	
@@ -642,6 +695,29 @@
 	only screen and (-o-min-device-pixel-ratio: 3/2),
 	only screen and (min-device-pixel-ratio: 1.5) {
 	  
-	  faq-q { background: url(../images/countries/bullet@2x.png) no-repeat 0 7px; } }
+	  	.faq-q { background: url(../images/countries/bullet@2x.png) no-repeat 0 7px; } }
+	  
+	  
+	  
+	  
+/* -----------------------------------------
+	Press and Media
+----------------------------------------- */
+
+	.date { display: block; font-weight: 500; color: #828282; line-height: 1.5; }
+	
+	.press-q {
+		cursor: pointer; position: relative; line-height: 1.5;  margin: 1em 0;
+		 font-weight: 500; color: #222; }
+		
+	.press-a h3 { font-style: italic; font-size: 1.3125em; }	
+	
+	.news, .releases { margin-top: 1em; }
+	  
+	.releases a { color: #222; }
+	
+	.news a[href^="http://"]:after {
+		content: ""; width: 11px; height: 1.14285714em; position: absolute; margin: 0 0 0 8px;
+		background: url(../images/common/external-link.png) no-repeat center bottom; }
 	
 
