--- a/static/stylesheets/foundation.css
+++ b/static/stylesheets/foundation.css
@@ -721,3 +721,59 @@ ul.orbit-bullets li.active.has-thumb { background-position: 0 0; border-top: 2px
    .flyout.small, .flyout.large { width: 100% !important; }
    .flyout p:last-child { margin-bottom: 18px; } }
  
+ 
+ 
+ 
+ 
+ 
+ /* Tabs ---------------------- */
+ dl.tabs { border-bottom: solid 1px #e6e6e6; display: block; height: 40px; padding: 0; margin-bottom: 20px; }
+ dl.tabs.contained { margin-bottom: 0; }
+ dl.tabs dt { color: #b3b3b3; cursor: default; display: block; float: left; font-size: 12px; height: 40px; line-height: 40px; padding: 0 9px 0 20px; width: auto; text-transform: uppercase; }
+ dl.tabs dt:first-child { padding: 0 9px 0 0; }
+ dl.tabs dd { display: block; float: left; padding: 0; margin: 0; }
+ dl.tabs dd a { color: #6f6f6f; display: block; font-size: 14px; height: 40px; line-height: 40px; padding: 0px 23.8px; }
+ dl.tabs dd a:focus { font-weight: bold; color: #2ba6cb; }
+ dl.tabs dd.active { border-top: 3px solid #2ba6cb; margin-top: -3px; }
+ dl.tabs dd.active a { cursor: default; color: #3c3c3c; background: #fff; border-left: 1px solid #e6e6e6; border-right: 1px solid #e6e6e6; font-weight: bold; }
+ dl.tabs dd:first-child { margin-left: 0; }
+ dl.tabs.vertical { height: auto; border-bottom: 1px solid #e6e6e6; }
+ dl.tabs.vertical dt, dl.tabs.vertical dd { float: none; height: auto; }
+ dl.tabs.vertical dd { border-left: 3px solid #cccccc; }
+ dl.tabs.vertical dd a { background: #f2f2f2; border: none; border: 1px solid #e6e6e6; border-width: 1px 1px 0 0; color: #555; display: block; font-size: 14px; height: auto; line-height: 1; padding: 15px 20px; -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset; -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset; box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset; }
+ dl.tabs.vertical dd.active { margin-top: 0; border-top: 1px solid #4d4d4d; border-left: 4px solid #1a1a1a; }
+ dl.tabs.vertical dd.active a { background: #4d4d4d; border: none; color: #fff; height: auto; margin: 0; position: static; top: 0; -webkit-box-shadow: 0 0 0; -moz-box-shadow: 0 0 0; box-shadow: 0 0 0; }
+ dl.tabs.vertical dd:first-child a.active { margin: 0; }
+ dl.tabs.pill { border-bottom: none; margin-bottom: 10px; }
+ dl.tabs.pill dd { margin-right: 10px; }
+ dl.tabs.pill dd:last-child { margin-right: 0; }
+ dl.tabs.pill dd a { -webkit-border-radius: 1000px; -moz-border-radius: 1000px; -ms-border-radius: 1000px; -o-border-radius: 1000px; border-radius: 1000px; background: #e6e6e6; height: 26px; line-height: 26px; color: #666; }
+ dl.tabs.pill dd.active { border: none; margin-top: 0; }
+ dl.tabs.pill dd.active a { background-color: #2ba6cb; border: none; color: #fff; }
+ dl.tabs.pill.contained { border-bottom: solid 1px #eee; margin-bottom: 0; }
+ dl.tabs.two-up dt a, dl.tabs.two-up dd a, dl.tabs.three-up dt a, dl.tabs.three-up dd a, dl.tabs.four-up dt a, dl.tabs.four-up dd a, dl.tabs.five-up dt a, dl.tabs.five-up dd a { padding: 0 17px; text-align: center; overflow: hidden; }
+ dl.tabs.two-up dt, dl.tabs.two-up dd { width: 50%; }
+ dl.tabs.three-up dt, dl.tabs.three-up dd { width: 33.33%; }
+ dl.tabs.four-up dt, dl.tabs.four-up dd { width: 25%; }
+ dl.tabs.five-up dt, dl.tabs.five-up dd { width: 20%; }
+ 
+ ul.tabs-content { display: block; margin: 0 0 20px; padding: 0; }
+ ul.tabs-content > li { display: none; }
+ ul.tabs-content > li.active { display: block; }
+ ul.tabs-content.contained { padding: 0; }
+ ul.tabs-content.contained > li { border: solid 0 #e6e6e6; border-width: 0 1px 1px 1px; padding: 20px; }
+ ul.tabs-content.contained.vertical > li { border-width: 1px 1px 1px 1px; }
+ 
+ .no-js ul.tabs-content > li { display: block; }
+ 
+ @media only screen and (max-width: 767px) { dl.tabs.mobile { width: auto; margin: 20px -20px 40px; height: auto; }
+   dl.tabs.mobile dt, dl.tabs.mobile dd { float: none; height: auto; }
+   dl.tabs.mobile dd a { display: block; width: auto; height: auto; padding: 18px 20px; line-height: 1; border: solid 0 #ccc; border-width: 1px 0 0; margin: 0; color: #555; background: #eee; font-size: 15px; font-size: 1.5rem; }
+   dl.tabs.mobile dd a.active { height: auto; margin: 0; border-width: 1px 0 0; }
+   .tabs.mobile { border-bottom: solid 1px #ccc; height: auto; }
+   .tabs.mobile dd a { padding: 18px 20px; border: none; border-left: none; border-right: none; border-top: 1px solid #ccc; background: #fff; }
+   .tabs.mobile dd a.active { border: none; background: #2ba6cb; color: #fff; margin: 0; position: static; top: 0; height: auto; }
+   .tabs.mobile dd:first-child a.active { margin: 0; }
+   dl.contained.mobile { margin-bottom: 0; }
+   dl.contained.tabs.mobile dd a { padding: 18px 20px; }
+   dl.tabs.mobile + ul.contained { margin-left: -20px; margin-right: -20px; border-width: 0 0 1px 0; } }
