--- a/static/stylesheets/app.css
+++ b/static/stylesheets/app.css
@@ -273,11 +273,8 @@
 		header .sidebar-button {  } }
 	
 	
-		
 	
-
-
-
+	
 
 
 
@@ -335,6 +332,16 @@
 		.footerlink.copyright-single { display: block; width: 100%; text-align: center; margin-top: 10px; } }
 		
 		
+	
+	@media only screen and (max-width: 400px) { 
+		
+		footer {  height: 180px; }
+		footer ul { margin-top: 20px; margin-left: 20px; margin-right: 20px; }
+		footer li { margin-top: 6px; }
+	
+	}	
+		
+		
 		
 	@media only screen and (-Webkit-min-device-pixel-ratio: 1.5),
 	only screen and (-moz-min-device-pixel-ratio: 1.5),
@@ -353,11 +360,24 @@
 	.js [role="main"] { background: #fff; }
 	.js [role="main"] { border-radius: 0; /*background: #1C1C1C;*/ }
 	
-	#sidebar .nav-bar { margin-top: 0; background: #2e2e2e; }
+	#sidebar .nav-bar { margin-top: 0; background: #2c2c2c; }
 	#sidebar .nav-bar > li > a:first-child { font-size:1.14285714em; }
 	
 	#sidebar .nav-bar > li { line-height: 2.5em; }
 	#sidebar .nav-bar > li ul { margin-left: 0;  }
+	
+	#sidebar .nav-bar > li:hover { 
+	background: #b00f0f; /* Old browsers */
+	background: -moz-linear-gradient(top, #b00f0f 0%, #920c0c 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b00f0f), color-stop(100%,#920c0c)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top, #b00f0f 0%,#920c0c 100%); /* IE10+ */
+	background: linear-gradient(to bottom, #b00f0f 0%,#920c0c 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b00f0f', endColorstr='#920c0c',GradientType=0 ); /* IE6-9 */
+	
+	 }
+	
 	
 	ul.flyout li a, #sidebar .nav-bar li ul li a { font-size: 1em; padding: 10px 20px; }
 	
@@ -365,10 +385,11 @@
 
 	
 	[role="main"]:before { background: #333; }
+
 	
-	#sidebar .nav-bar { border-bottom: 1px solid #2e2e2e;}
-	
-	#sidebar .nav-bar > li { box-shadow: none; -moz-box-shadow: none;  }
+	#sidebar .nav-bar > li { 
+		box-shadow: none; -moz-box-shadow: none; border: none;
+		border-bottom: 1px solid #444; }
 	
 
 /* -----------------------------------------
@@ -379,11 +400,11 @@
 	.js #index [role="main"] { padding: 0; }
 
 	.homebanner { height: 540px; background: #222; color: #fff; }
-	.homesub  {  text-align: center; padding-top: 84px; padding-bottom: 60px; }
+	.homesub  {  text-align: center; padding-top: 84px; padding-bottom: 60px; background: #fff; z-index: 999; }
 	.homesub .block-grid.six-up {  margin: 2em -8px 0px -8px; }
 	
 	.homesub .block-grid.six-up img { margin-bottom: 1em; width: 100%; }
-	.homesub .block-grid.six-up span { width: 100%; }
+	.homesub .block-grid.six-up span { width: 100%; display: none; }
 	.homesub .block-grid.six-up > li { 
 		 width: 16.66666667%;  padding: 0;
 		text-transform: uppercase; line-height: 1.3; font-size: 0.875em; }
@@ -400,10 +421,7 @@
 		/*background: url(../images/homepage/platform_app.png) no-repeat center 0 ;*/ 
 		}
 	
-	
-	.homeslide1 h1 { margin-top: 142px; }
-	.homeslide2 h1 { margin-top: 118px; padding-right: 50px; }
-	.homeslide3 h1 { margin-top: 118px;  }
+
 	
 	
 	.row .ten.billingpartners {width: 100%; }
@@ -413,6 +431,8 @@
 	.partners { margin-bottom: 1.5em; }
 	
 	.partners.featured { margin-left: 40px; }
+	
+	.partners li a { display: block; width: 100%; height: 100%; }	
 	
 	.partners li { 
 		display: inline-block; margin: 0 15px; text-indent: -9999px;
@@ -461,6 +481,8 @@
 		.partners li { 
 			display: block; text-align: center; margin: 0;
 			 width: 100% !important; }
+		 
+			 
 		.partners.featured { margin-left: 0px; }	 
 		
 		.partners li.irishtimes { background-position: center -57px; height: 40px; }
@@ -469,7 +491,9 @@
 		
 		.partners li.techcrunch { background-position: center -118px; margin-left: -6px; margin-top: 10px; }
 		.partners li.slashgear { background-position: center -168px; margin-left: -8px;  height:40px ; }
-		.partners li.venturebeat { background-position: center -222px; margin-left: -3px; }  }
+		.partners li.venturebeat { background-position: center -222px; margin-left: -3px; } 
+		
+		.homesub blockquote { padding: 0 15px; } }
 
 
 	@media only screen and (max-width: 767px) {
@@ -485,7 +509,7 @@
 		.homesub .block-grid.six-up { margin-top: ; }
 			
 		.homesub .block-grid.six-up img { margin-bottom: 0.5em; }	
-		.homesub .block-grid.six-up span { display: block; height: 2em; }	  }
+		.homesub .block-grid.six-up span { display: block; height: 2em;  display: none; }	  }
 		
 		
 	@media only screen and (min-width:650px) and (max-width: 767px) {
@@ -502,13 +526,61 @@
 	@media only screen and (min-width: 768px) {	
 		.homesub .block-grid.six-up { margin: 30px -30px 0 -30px; }
 		.row .ten.billingpartners {  margin-bottom: 3em; }
-		.columns.centered.homeblurb { margin-bottom: 4em; } }
+		.columns.centered.homeblurb { margin-bottom: 2em; } }
 		
 		
 		
 	@media only screen and (max-width: 710px) {
 	
 		.billingpartners {width: 100%;} }	
+		
+		
+		
+		
+/* -----------------------------------------
+	Homeslider
+----------------------------------------- */
+		
+		
+		
+		 #homeslide *  { color: #fff;  }
+
+		.homeslide1 { background: url(../images/homepage/homeslide1.jpg) no-repeat center top; }
+		.homeslide2 { background: url(../images/homepage/homeslide2.jpg) no-repeat center top; }
+		
+		.homeslide3 { background: url(../images/homepage/homeslide3.jpg) no-repeat center top; }
+		
+		
+		.home-iphone { background:  url('../images/homeslider/slide1.png') no-repeat left bottom;
+			height: 540px; background-size:100%;  }
+			
+			
+		.home-laptop-container { position: relative; height: 540px; }	
+			
+		.home-laptop { background: url(../images/homeslider/slide3.png) no-repeat left bottom; height: 540px; width: 660px; position: absolute; right: -700px; bottom: 0; }	
+			
+		.homeslide3 .row { overflow: visible; }	
+			
+			
+		h3 .button.large { font-size: 0.66666667em; margin-top: 1em; }	
+
+
+		.homeslide1 h1 { margin-top: 160px; }
+		.homeslide2 h1 { margin-top: 150px; padding-right: 70px; }
+		.homeslide3 h1 { margin-top: 118px;  }
+		
+		
+		
+		.subtitle-login { margin-top: 1em; }
+		
+		.subtitle-pricepoints { margin-top: 0.5em; }
+		
+		
+		
+		
+		
+		
+		
 				
 	
 	
@@ -560,7 +632,11 @@
 		
 		
 	.sub-graph { 
-		background: url(../images/product-pages/subscription-graph.jpg) no-repeat ; height: 280px; }		
+		background: url(../images/product-pages/subscription-graph.jpg) no-repeat ; height: 280px; }	
+		
+	
+	.graph-key p { color: #828282; font-style: italic; }	
+		
 	
 	
 	@media only screen and (max-width: 767px) {
@@ -584,8 +660,10 @@
 		
 	@media only screen and (min-width: 768px) {	
 		.sub-graph { background-size:100%; }
-		.smarttv-facts { margin-top: 2em;  padding-left: 40px;
-		} }
+		.smarttv-facts { margin-top: 2em;  padding-left: 40px;}
+		.graph-key p { height: 220px; display: table-cell; vertical-align: middle;  }	
+		
+		 }
 		
 	@media only screen and (min-width: 870px) {	
 		.whitelabel-facts { margin-top: 2em; } }
@@ -889,13 +967,16 @@
 ----------------------------------------- */
 
 
+
 	.map-container { 
 		display: inline-block; position: relative; width: 100%; 
 	    margin-top: 2em; margin-bottom: 3em; border-top: 1px solid #ccc; border-bottom: 1px solid #ccc; }
 
 	.map-inner { margin-top: 37%; /* 4:3 aspect ratio */ }
  
-	.map { position: absolute; top: 0; bottom: 0; left: 0; right: 0; }
+	.map { position: absolute; top: 0; bottom: 0; left: 0; right: 0; overflow: hidden; }
+	
+	.map iframe { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
 
 	h1 + .block-grid.four-up { margin-top: 1.14285714em; } 
 	
@@ -914,7 +995,8 @@
 		
 	@media only screen and (max-width: 480px) {
 	
-		.map-inner { margin-top: 60%; /* 4:3 aspect ratio */ } }
+		.map-inner { margin-top: 30%; /* 4:3 aspect ratio */ } }
+		
 		
 		
 	
